--- a/public/locales/fn/translation.json
+++ b/public/locales/fn/translation.json
@@ -79,5 +79,6 @@
     "blog_right_sidebar": "Blog Barre latérale droite",
     "blog_details_standard": "Détails du blog Standard",
     "blog_details_video": "Blog Détails Vidéo",
-    "blog_details_slider": "Détails du blog"
+    "blog_details_slider": "Détails du blog",
+    "dashboard": "Dashboard"
 }  
