--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,84 +1,84 @@
 {
-    "home": "Home",
-    "home_group_one": "Home Group One",
-    "home_group_two": "Home Group Two",
-    "home_group_three": "Home Group Three",
-    "home_fashion": "Home Fashion",
-    "home_fashion_two": "Home Fashion Two",
-    "home_fashion_three": "Home Fashion Three",
-    "home_fashion_four": "Home Fashion Four",
-    "home_fashion_five": "Home Fashion Five",
-    "home_fashion_six": "Home Fashion Six",
-    "home_fashion_seven": "Home Fashion Seven",
-    "home_fashion_eight": "Home Fashion Eight",
-    "home_kids_fashion": "Home Kids Fashion",
-    "home_cosmetics": "Home Cosmetics",
-    "home_furniture": "Home Furniture",
-    "home_furniture_two": "Home Furniture Two",
-    "home_furniture_three": "Home Furniture Three",
-    "home_furniture_four": "Home Furniture Four",
-    "home_furniture_five": "Home Furniture Five",
-    "home_furniture_six": "Home Furniture Six",
-    "home_furniture_seven": "Home Furniture Seven",
-    "home_electronics": "Home Electronics",
-    "home_electronics_two": "Home Electronics Two",
-    "home_electronics_three": "Home Electronics Three",
-    "home_book_store": "Home Book Store",
-    "home_book_store_two": "Home Book Store Two",
-    "home_plants": "Home Plants",
-    "home_flower_shop": "Home Flower Shop",
-    "home_flower_shop_two": "Home Flower Shop Two",
-    "home_organic_food": "Home Organic Food",
-    "home_organic_food_two": "Home Organic Food Two",
-    "home_onepage_scroll": "Home Onepage Scroll",
-    "home_grid_banner": "Home Grid Banner",
-    "home_auto_parts": "Home Auto Parts",
-    "home_cake_shop": "Home Cake Shop",
-    "home_handmade": "Home Handmade",
-    "home_pet_food": "Home Pet Food",
-    "home_medical_equipment": "Home Medical Equipment",
-    "home_christmas": "Home Christmas",
-    "home_black_friday": "Home Black Friday",
-    "home_black_friday_two": "Home Black Friday Two",
-    "home_valentines_day": "Home Valentines Day",
-    "shop": "Shop",
-    "shop_layout": "Shop Layout",
-    "shop_grid_standard": "Shop Grid Standard",
-    "shop_grid_filter": "Shop Grid Filter",
-    "shop_grid_two_column": "Shop Grid Two Column",
-    "shop_grid_no_sidebar": "Shop Grid No Sidebar",
-    "shop_grid_full_width": "Shop Grid Full Width",
-    "shop_grid_right_sidebar": "Shop Grid Right Sidebar",
-    "shop_list_standard": "Shop List Standard",
-    "shop_list_full_width": "Shop List Full Width",
-    "shop_list_two_column": "Shop List Two Column",
-    "product_details": "Product Details",
-    "product_tab_bottom": "Product Tab Bottom",
-    "product_tab_left": "Product Tab Left",
-    "product_tab_right": "Product Tab Right",
-    "product_sticky": "Product Sticky",
-    "product_slider": "Product Slider",
-    "product_fixed_image": "Product Fixed Image",
-    "product_simple": "Product Simple",
-    "product_variation": "Product Variation",
-    "product_affiliate": "Product Affiliate",
-    "collection": "Collection",
-    "pages": "Pages",
-    "cart": "Cart",
-    "checkout": "Checkout",
-    "wishlist": "Wishlist",
-    "compare": "Compare",
-    "my_account": "My Account",
-    "login_register": "Login / Register",
-    "about_us": "About Us",
-    "contact_us": "Contact Us",
-    "404_page": "404 Page",
-    "blog": "Blog",
-    "blog_standard": "Blog Standard",
-    "blog_no_sidebar": "Blog No Sidebar",
-    "blog_right_sidebar": "Blog Right Sidebar",
-    "blog_details_standard": "Blog Details Standard",
-    "blog_details_video": "Blog Details Video",
-    "blog_details_slider": "Blog Details Slider",
-    "dashboard": "Dashboard"
-}  
+  "home": "Нүүр хуудас",
+  "home_group_one": "Home Group One",
+  "home_group_two": "Groupe de maison deux",
+  "home_group_three": "Groupe d'accueil 3",
+  "home_fashion": "Mode maison",
+  "home_fashion_two": "Mode maison deux",
+  "home_fashion_three": "Accueil Mode Trois",
+  "home_fashion_four": "Accueil Fashion Four",
+  "home_fashion_five": "Accueil Fashion Five",
+  "home_fashion_six": "Accueil Fashion Six",
+  "home_fashion_seven": "Accueil Fashion Seven",
+  "home_fashion_eight": "Accueil Fashion Eight",
+  "home_kids_fashion": "Accueil Mode Enfants",
+  "home_cosmetics": "Cosmétiques à la maison",
+  "home_furniture": "Meubles de maison",
+  "home_furniture_two": "Meubles de maison deux",
+  "home_furniture_three": "Meubles de maison trois",
+  "home_furniture_four": "Meubles de maison four",
+  "home_furniture_five": "Meubles de maison five",
+  "home_furniture_six": "Meubles de maison six",
+  "home_furniture_seven": "Meubles de maison seven",
+  "home_electronics": "Electronique domestique",
+  "home_electronics_two": "Électronique grand Two",
+  "home_electronics_three": "Électronique grand Three",
+  "home_book_store": "Accueil librairie",
+  "home_book_store_two": "Accueil librairie two",
+  "home_plants": "Plantes d'intérieur",
+  "home_flower_shop": "Maison Fleuriste",
+  "home_flower_shop_two": "Maison Fleuriste two",
+  "home_organic_food": "Accueil biologiques",
+  "home_organic_food_two": "Accueil Alimentation Deux",
+  "home_onepage_scroll": "Accueil Onepage Scroll",
+  "home_grid_banner": "Accueil Grid Banner",
+  "home_auto_parts": "Accueil automobiles",
+  "home_cake_shop": "Accueil Pâtisserie",
+  "home_handmade": "Maison à la main",
+  "home_pet_food": "Accueil pour animaux",
+  "home_medical_equipment": "équipement médical à domicile",
+  "home_christmas": "Maison Christmas",
+  "home_black_friday": "Maison Black Friday",
+  "home_black_friday_two": "Maison Black Friday Two",
+  "home_valentines_day": "Maison Valentines Day",
+  "shop": "Дэлгүүр",
+  "shop_layout": "Disposition de magasin",
+  "shop_grid_standard": "Boutique Grid Standard",
+  "shop_grid_filter": "Filtre de grille d'achat",
+  "shop_grid_two_column": "Boutique Grille Colonnes",
+  "shop_grid_no_sidebar": "Boutique Grid No Sidebar",
+  "shop_grid_full_width": "Grille de magasin largeur",
+  "shop_grid_right_sidebar": "Shop Grid Right latérale",
+  "shop_list_standard": "Liste de magasin standard",
+  "shop_list_full_width": "Liste pleine largeur",
+  "shop_list_two_column": "Liste deux colonnes",
+  "product_details": "détails du produit",
+  "product_tab_bottom": "Onglet Produit Bas",
+  "product_tab_left": "Onglet Produit à gauche",
+  "product_tab_right": "Onglet Produit Droite",
+  "product_sticky": "Produit collant",
+  "product_slider": "Produit slider",
+  "product_fixed_image": "Image fixe du produit",
+  "product_simple": "Produit simple",
+  "product_variation": "Variation du produit",
+  "product_affiliate": "Produit affilié",
+  "collection": "Collection",
+  "pages": "Хуудаснууд",
+  "cart": "Сагс",
+  "checkout": "Тооцоо хийх",
+  "wishlist": "Хүссэн жагсаалт",
+  "compare": "Харьцуулах",
+  "my_account": "Миний мэдээлэл",
+  "login_register": "Нэвтрэх / Бүртгүүлэх",
+  "about_us": "Бидний тухай",
+  "contact_us": "Холбоо барих",
+  "404_page": "404 Page",
+  "blog": "Blog",
+  "blog_standard": "Blog Standard",
+  "blog_no_sidebar": "Blog No Sidebar",
+  "blog_right_sidebar": "Blog Barre latérale droite",
+  "blog_details_standard": "Détails du blog Standard",
+  "blog_details_video": "Blog Détails Vidéo",
+  "blog_details_slider": "Détails du blog",
+  "dashboard": "Хяналтын самбар"
+}
